# franka-config

./: .gitignore  README.md  environment-franka.yml  environment.yml  install.sh  install_libfranka_pylibfranka.sh
libfranka-test/: CMakeLists.txt  README.md  main.cpp
pylibfranka-test/: README.md  test_pylibfranka.py
